added new button

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <form id="gameForm">
             <input type="text" id="textInput" placeholder="Ex: Jailbreak">
             <button id="search" type="submit">Search</button>
+            <button id="clear" type="reset">Clear</button>
         </form>
     </section>
     <script src="script.js"></script>
